apps/multi-scrobbler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-scrobbler
  namespace: music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-scrobbler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: multi-scrobbler
    spec:
      containers:
        - name: multi-scrobbler
          image: ghcr.io/foxxmd/multi-scrobbler:latest
          ports:
            - containerPort: 9078
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: multi-scrobbler-config
