apps/multi-scrobbler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-scrobbler
  namespace: music
spec:
  type: ClusterIP
  selector:
    app: multi-scrobbler
  ports:
    - port: 9078
      targetPort: 9078
