apps/multi-scrobbler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-scrobbler
  namespace: music
spec:
  ingressClassName: traefik
  rules:
    - host: scrobbler.webernet.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multi-scrobbler
                port:
                  number: 9078
